cluster-resources/pitstop-stage-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pitstop-stage
  annotations:
    linkerd.io/inject: enabled
