cluster-resources/pitstop-test-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pitstop-test
  annotations:
    linkerd.io/inject: enabled
