cluster-resources/platform-stage-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-stage
  annotations:
    linkerd.io/inject: enabled
