cluster-resources/platform-test-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-test
  annotations:
    linkerd.io/inject: enabled
