cluster-resources/ra-stage-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ra-stage-techradar
  annotations:
    linkerd.io/inject: enabled
