cluster-resources/ra-test-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ra-test-techradar
  annotations:
    linkerd.io/inject: enabled
