cluster-resources/rabbitmq-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
  # annotations:
  #  linkerd.io/inject: enabled
