cluster-resources/rabbitmq-system-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq-system
  #annotations:
  #  linkerd.io/inject: enabled
