cluster-resources/redis-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis
  annotations:
    linkerd.io/inject: enabled
