cluster-resources/stage-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stage
  annotations:
    linkerd.io/inject: enabled
